# sorul_tradingbot

./: .gitignore  CHANGELOG.md  Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt  requirements_dev.txt
.cspell/: custom-dictionary-workspace.txt
Metatrader/: docker_mt5_start.sh
Metatrader/root/defaults/: autostart  menu.xml
config/: tox.ini
metatrader/: docker_mt5_start.sh
metatrader/root/defaults/: autostart  docker_mt5_start.sh  menu.xml
notebooks/: real_trading.ipynb
root/defaults/: autostart
scripts/: execute_mt5.sh  main_forex.sh
sorul_tradingbot/: event_handler.py  main_forex.py  strategy_factory.py  strategy_factory.py.save
sorul_tradingbot/executable/: forex_executable.py
sorul_tradingbot/strategy/simulator/: labels.py  simulator.ipynb  simulator.py
sorul_tradingbot/strategy/simulator/data/: sp500_5m_test.csv  sp500_test.csv
sorul_tradingbot/strategy/simulator/sorul_tradingbot/strategy/simulator/outputs/volume_12_2026-04-15_00-09/: simulation_summary.txt  volume_12.py
tests/: test_simulator.py  test_volume_19_levels_period.py
