[tool.poetry]
name = "sorul_tradingbot"
version = "0.1.0"
description = ""
authors = ["sorul <cromerovargas2d@gmail.com>"]

[tool.poetry.dependencies]
python = "3.8.1"
tradingbot = { git = "https://github.com/sorul/tradingbot.git", tag = "v0.11.1" }

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
