[tool.poetry]
name = "sorul_tradingbot"
version = "0.2.0"
description = ""
authors = ["sorul <cromerovargas2d@gmail.com>"]

[tool.poetry.dependencies]
python = "3.8.1"
tradeo = "*"


[tool.poetry.dev-dependencies]
pytest = "^7.4.4"
freezegun = "^1.4.0"
flake8-bugbear = "^24.1.17"
flake8-print = "^5.0.0"
flake8-builtins = "^2.2.0"
flake8-eradicate = "^1.5.0"
flake8-pie = "^0.16.0"
flake8-secure-coding-standard = "^1.4.1"
flake8-string-format = "^0.3.0"
flake8-unused-arguments = "^0.0.13"
flake8-warnings = "^0.4.1"
flake8-comprehensions = "^3.14.0"
flake8-literal = "^1.4.0"
flake8-multiline-containers = "^0.0.19"
flake8-newspaper-style = "^0.4.3"
flake8-annotations-complexity = "^0.0.8"
flake8-cognitive-complexity = "^0.1.0"
flake8-functions = "^0.0.8"
flake8-docstrings = "^1.7.0"
flake8-pytest-style = "^1.7.2"
flake8-pytest = "^1.4"
python-dotenv = "^1.0.1"
flake8-annotations = "^3.0.1"

[tool.poetry.scripts]
run_forex = "sorul_tradingbot.main_forex:run"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
